kyverno/allow-capabilities.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: allow-add-capabilities
  namespace: openebs
  annotations:
    policies.kyverno.io/category: Pod Security Standards
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
          Provides a list of capabilities that are allowed to be added to a container.
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: capabilities
      match:
        resources:
          name: "openebs-*"
          kinds:
            - Pod
      validate:
        message: >-
          Default set of capabilities are allowed.        
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(capabilities):
                    =(add): "*"
            =(initContainers):
              - =(securityContext):
                  =(capabilities):
                    =(add): "*"
